--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana</title>
+    <style>
+        textarea {
+            width: 80%;
+            height: 10vh;
+            display: block;
+            margin: 1rem;
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
     <h1>Talk Banana</h1>
+    <textarea placeholder="put your sentence in English here and we convert it into banana language"></textarea>
     <button id="btn-translate">Translate</button>
     <script src="app.js" text="text/javascript"></script>
 </body>
