taking input and console

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Talk Banana</h1>
-    <textarea placeholder="put your sentence in English here and we convert it into banana language"></textarea>
+    <textarea id = "txt-input"placeholder="put your sentence in English here and we convert it into banana language"></textarea>
     <button id="btn-translate">Translate</button>
     <script src="app.js" text="text/javascript"></script>
 </body>
