--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
             margin: 1rem;
             padding: 1rem;
         }
+        #output{
+            border: 1px solid black;
+            height: 10vh;
+            width: 80%;
+            margin: 1rem;
+            padding: 1rem;
+        }
     </style>
 </head>
 <body>
     <h1>Talk Banana</h1>
     <textarea id = "txt-input"placeholder="put your sentence in English here and we convert it into banana language"></textarea>
     <button id="btn-translate">Translate</button>
+    <div style="font-size: larger;">Output will come here 👇</div>
+    <div id="output"></div>
     <script src="app.js" text="text/javascript"></script>
 </body>
 </html>
