--- a/index.html
+++ b/index.html
@@ -4,30 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>banana</title>
-    <style>
-        textarea {
-            width: 80%;
-            height: 10vh;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-        #output{
-            border: 1px solid black;
-            height: 10vh;
-            width: 80%;
-            margin: 1rem;
-            padding: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>Banana App</title>
+    
 </head>
 <body>
     <h1>Talk Banana</h1>
-    <textarea id = "txt-input"placeholder="put your sentence in English here and we convert it into banana language"></textarea>
-    <button id="btn-translate">Translate</button>
-    <div style="font-size: larger;">Output will come here 👇</div>
-    <div id="output"></div>
+    <main class="container">
+
+        <textarea id = "txt-input"placeholder="put your sentence in English here and we convert it into banana language"></textarea>
+        <button id="btn-translate">Translate</button>
+        <div id="output-text">Output will come here 👇</div>
+        <div id="output"></div>
+    </main>
+    <div class="footer">
+        <h3>About</h3>
+        <footer>Are you a fan of minions? Did you no that the gibberish they say is an actual language.<br> Use the translator to convert your text from English to Minion speak or Banana language.</footer>
+    </div>
     <script src="app.js" text="text/javascript"></script>
 </body>
 </html>
